--- a/Capstone_Project_Global_terrorism_EDA_by_Somyak_Mukherjee.ipynb
+++ b/Capstone_Project_Global_terrorism_EDA_by_Somyak_Mukherjee.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/somyakmukherjee/Exploratory-Data-Analysis-on-Global-Terrorism-/blob/main/Capstone_Project_Global_terrorism_EDA_by_Somyak_Mukherjee.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/somyakmukherjee/Exploratory-Data-Analysis-on-Global-Terrorism/blob/main/Capstone_Project_Global_terrorism_EDA_by_Somyak_Mukherjee.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -90,12 +90,12 @@
       "metadata": {
         "id": "RA8Iue5rXdw_"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -154,7 +154,7 @@
         "id": "mzE4G8QF8eYg",
         "outputId": "c8cd0047-bcdc-4545-8f29-878b4c634b33"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1041,7 +1041,7 @@
         "id": "gCxySlq6ZjaX",
         "outputId": "b3dac212-7e55-4a16-b93f-f9822e4e5239"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1089,7 +1089,7 @@
         "id": "V8UhRv2kaV_u",
         "outputId": "231b7039-60d1-47d3-ccb1-0983abd073e9"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1204,7 +1204,7 @@
         "id": "I22AbbNiaqsU",
         "outputId": "d09db0a1-95b4-4014-e2d3-17c2d0988cf5"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1239,7 +1239,7 @@
         "id": "Nlpo3v7ta5qj",
         "outputId": "ab6d696f-9a53-488b-af11-a0ba91744bda"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1267,7 +1267,7 @@
         "id": "tRE45QembBTg",
         "outputId": "cb86ee09-91f0-4c5e-b23a-19086e536922"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1350,7 +1350,7 @@
       "metadata": {
         "id": "2XQxsRBJ6_hd"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1674,7 +1674,7 @@
       "metadata": {
         "id": "WhthaB8Bc3iz"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1689,7 +1689,7 @@
         "id": "EEBMC_Cp9I0D",
         "outputId": "452eaf6e-dff1-4163-bd62-e689a4d3539b"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1745,7 +1745,7 @@
       "metadata": {
         "id": "M2Qx5lHu9R3t"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1761,7 +1761,7 @@
         "id": "yE3Q4rMD-IMP",
         "outputId": "f4854806-3247-43e2-9556-a770ecea38e7"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2063,7 +2063,7 @@
         "id": "1Gq1m31__Jj1",
         "outputId": "dd232d21-a46b-4ca5-8ba6-a0c73561b0ba"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2092,7 +2092,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **1) Attack Types or Methods Analysis**"
+        "## **3) Attack Types or Methods Analysis**\n",
+        "\n",
+        "Here we will explore the different types of attacks used by Terrorists & how they spread the terror by employing different attack methods like explosion, armed assault, assassination or hijacking."
       ],
       "metadata": {
         "id": "ymS3kDLtACxA"
@@ -2144,7 +2146,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **2) Terrorist Activities by Regions**"
+        "## **4) Terrorist Activities by Regions**\n",
+        "\n",
+        "In this analysis we will explore the terrorist activities by different region in each year starting from 1970 till 2017. This exploratory analysis by using cross-tabulation of Year & Region will help us to identify some important patterns about terrorism. "
       ],
       "metadata": {
         "id": "36w3joVZozja"
@@ -2184,7 +2188,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **3) Target Analysis**"
+        "## **5) Target Analysis**\n",
+        "\n",
+        "Here we will explore the different types of targets which were chosen by terrorist to spread their terror activities. We will see the most favourite targets of terrorists. "
       ],
       "metadata": {
         "id": "D6loFEnZsT9W"
@@ -2277,6 +2283,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **6) Casualty Analysis**\n",
+        "\n",
+        "In this analysis, we will visualize the number of casualities (fatalities & injuries) resulting from terrorist incidents & we will identify patterns and changes in casualty count in specific regions. This analysis can highlight the severity & impact of terrorism on affected populations."
+      ],
+      "metadata": {
+        "id": "f8IdcpmTjlft"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df=gt_df.groupby('Country')['Kills'].count().sort_values(ascending=False).reset_index().head(10)\n",
@@ -2290,7 +2307,7 @@
         "id": "-AwFAAsraoMJ",
         "outputId": "6a3d29a5-2857-4e78-8d80-fb0cbba410fb"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2487,7 +2504,7 @@
         "id": "MK6RkGQKatrA",
         "outputId": "c9a503c8-a185-4c13-9d07-b2810e84bee1"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2514,7 +2531,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **A Perspective of terror attacks in India**"
+        "# **7) A Perspective of terror attacks in India**\n",
+        "\n",
+        "In this analysis we will explore different visualizations of terror attacks in India, like: most affected states, cities & also we will see which terror groups are most prevalent in India. We will see the most favourite targets of terrorists. We will also explore the most favourite attacking methods of terrorists. At last we will be plotting an interactive visualization of terror attacks by locationwise (Latitude & Longitude) analysis in Indian subcontinent."
       ],
       "metadata": {
         "id": "sawbyP1Jl54t"
@@ -2536,7 +2555,7 @@
         "id": "oOuvqecod7WT",
         "outputId": "20b612f4-1601-441d-cadf-6c297399144c"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2732,7 +2751,7 @@
         "id": "c2RAv2i0lGWO",
         "outputId": "02e24b06-24ac-43e5-bef0-bda442253b59"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2928,7 +2947,7 @@
         "id": "JvN7w27vnx7V",
         "outputId": "ed259a70-f0bc-4571-86c4-6a7947839253"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3112,7 +3131,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Top 10 most attacked Targets in India\n",
+        "#Dataset of Top 10 most attacked Targets in India\n",
         "attack_df = gt_india.groupby(\"Attacktype\")['Kills'].count().sort_values(ascending=False).reset_index().head(10)\n",
         "attack_df"
       ],
@@ -3124,7 +3143,7 @@
         "id": "kHB7dtnhrDP1",
         "outputId": "615941be-b4f7-4151-942b-605d54eb6e62"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3336,7 +3355,11 @@
         "plt.ylabel('No of Attacks',fontsize = 16)\n",
         "plt.xticks(rotation=90)\n",
         "\n",
-        "plt.gcf().set_size_inches(22,20)\n"
+        "# Set plot size\n",
+        "plt.gcf().set_size_inches(22,20)\n",
+        "\n",
+        "# Display plot\n",
+        "plt.show()"
       ],
       "metadata": {
         "colab": {
@@ -3346,7 +3369,7 @@
         "id": "ja1HsxLohBId",
         "outputId": "a67bc97c-cb08-4672-c50e-1256787968b4"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3378,7 +3401,7 @@
         "id": "qa72YfGSe-LP",
         "outputId": "3c55916d-b7f3-4717-8e38-d00a4978df18"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3426,11 +3449,11 @@
       "source": [
         "### **Observations :**\n",
         "\n",
-        "1) In 2016, India has suffered the most number of Terrorist attacks.\n",
+        "1) In 2016, India has suffered the maximum number of Terrorist attacks.\n",
         "\n",
         "2) 'Jammu and Kashmir' is the State with most Terror attacks in India succeeded by 'Assam' & 'Manipur'.\n",
         "\n",
-        "3) 'Srinagar' is the city with most attacks in India follwed by 'Imphal' & 'New Delhi'.\n",
+        "3) 'Srinagar' is the city with most attacks in India followed by 'Imphal' & 'New Delhi'.\n",
         "\n",
         "4) Most dangerous terrorist group in India is Maoists followed by Sikh_Extremists & ULFA.\n",
         "\n",
